# Launcher-Cracked

./: .gitignore  .gitmodules  CMakeLists.txt  COPYING.md
.github/workflows/: build-windows.yml
branding/: MiniSkins.icns  MiniSkins.manifest  MiniSkins.rc  MultiMC.icns  genicons.sh  logo.qrc
buildconfig/: BuildConfig.cpp.in  BuildConfig.h
launcher/: Application.cpp  Application.h  BaseInstance.cpp  BaseInstance.h  CMakeLists.txt  DownloadSource.cpp  DownloadSource.h  InstanceImportTask.cpp  InstanceImportTask.h  InstanceList.cpp  JavaCommon.cpp  LaunchController.cpp  LaunchController.h  MMCZip.cpp  MMCZip.h
launcher/icons/: IconList.cpp  MMCIcon.cpp
launcher/java/: JavaChecker.cpp  JavaChecker.h  JavaInstall.cpp  JavaInstall.h  JavaInstallList.cpp  JavaUtils.cpp  JavaUtils.h
launcher/launch/steps/: CheckJava.cpp  CheckJava.h
launcher/minecraft/: LaunchProfile.cpp  LaunchProfile.h  MinecraftInstance.cpp  MinecraftInstance.h  MinecraftUpdate.cpp  PackProfile.cpp  PackProfile.h
launcher/minecraft/auth/: AccountData.cpp  AccountData.h  AccountList.cpp  AccountList.h  AuthSession.h  BsYggdrasil.cpp  BsYggdrasil.h  MinecraftAccount.cpp  MinecraftAccount.h  Parsers.cpp  Yggdrasil.cpp
launcher/minecraft/launch/: ClaimAccount.cpp
launcher/minecraft/legacy/: LegacyUpgradeTask.cpp
launcher/net/: Download.cpp  Download.h  NetJob.cpp  PasteUpload.cpp  UploadTask.cpp  UploadTask.h  mcloUpload.cpp  mcloUpload.h
launcher/notifications/: NotificationChecker.cpp
launcher/translations/: TranslationsModel.cpp
launcher/ui/: GuiUtil.cpp  MainWindow.cpp  MainWindow.h
launcher/updater/: UpdateChecker.cpp
libraries/: README.md
libraries/javacheck/: CMakeLists.txt
libraries/launcher/: CMakeLists.txt
libraries/qrcode/: CMakeLists.txt
notsecrets/: CMakeLists.txt  Secrets.cpp
(+69 files in other folders)
